--- a/app/source/scripts/play.html
+++ b/app/source/scripts/play.html
@@ -192,6 +192,21 @@
 				</div>
 			</div>
 		</div>
+		<div id="errorModal" class="modal fade" role="dialog" data-backdrop="static" data-keyboard="false">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h4 class="modal-title">Error</h4>
+					</div>
+					<div class="modal-body">
+						<span>The level could not be found.</span>
+					</div>
+					<div class="modal-footer">
+						<a type="button" class="btn btn-default exit">OK</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
