--- a/app/source/scripts/play.html
+++ b/app/source/scripts/play.html
@@ -5,17 +5,9 @@
 		<title>Blockade - Play</title>
 		<link rel="stylesheet" href="css/bootstrap.css" title="dark">
 		<link rel="stylesheet" href="css/blockade.css">
+		<link rel="stylesheet" href="css/play.css">
 		<link rel="stylesheet" href="../resources/themes/default.css">
 		<style>
-			.btn:focus {
-				outline: none !important;
-			}
-			[disabled] {
-				pointer-events: none;
-			}
-			.modal-title {
-				font-family: inherit;
-			}
 			.btn-quality {
 				padding: 8px 10px 2px 12px;
 			}
@@ -95,34 +87,8 @@
 		</style>
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 	</head>
-	<body style="font-family: Hasklig; -webkit-user-select: none; cursor: default;">
-		<span id="gui" style="z-index: 1; pointer-events: none;">
-			<div id="menu" class="navbar navbar-default" style="position: absolute; left: 0px; pointer-events: all;">
-				<div class="container-fluid" style="padding-left: 0px; padding-right: 0px;">
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-						<ul class="nav navbar-nav">
-							<li><a class="restart" style="cursor: pointer;">Restart</a></li>
-							<li><a class="exit" style="cursor: pointer;">Level Select</a></li>
-							<li><a id="menuArrow" style="padding-right: 8px;">»</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div id="info" class="navbar navbar-default" style="position: absolute; right: 0px; bottom: 0px; pointer-events: all;">
-				<div class="container-fluid" style="padding-left: 0px; padding-right: 0px;">
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-						<ul class="nav navbar-nav">
-							<li><a id="infoArrow" style="padding-left: 8px;">»</a></li>
-							<li><a>Moves: <span id="moves">0</span></a></li>
-							<li><a>Distance: <span id="distance">0</span></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div style="position: absolute; left: 4px; bottom: 27px;">
-				<span class="label label-info" id="levelNumber"></span> <span id="levelName"></span>
-			</div>
-		</span>
+	<body hidden style="font-family: Hasklig; -webkit-user-select: none; cursor: default;">
+		<div class="container-fluid drag-bar" style="position: absolute;"></div>
 		<div id="game">
 			<div id="tiles">
 
@@ -134,6 +100,50 @@
 
 			</div>
 		</div>
+		<div id="gui" style="pointer-events: none;">
+			<!--div id="menu" class="navbar navbar-default" style="position: absolute; left: 0px; pointer-events: all;">
+				<div class="container-fluid" style="padding-left: 0px; padding-right: 0px;">
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+						<ul class="nav navbar-nav">
+							<li><a class="restart" style="cursor: pointer;">Restart</a></li>
+							<li><a class="exit" style="cursor: pointer;">Level Select</a></li>
+							<li><a id="menuArrow" style="padding-right: 8px;">»</a></li>
+						</ul>
+					</div>
+				</div>
+			</div-->
+			<!--div id="info" class="navbar navbar-default" style="position: absolute; right: 0px; bottom: -21px; pointer-events: all;">
+				<div class="container-fluid" style="padding-left: 0px; padding-right: 0px;">
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+						<ul class="nav navbar-nav">
+							<li><a id="infoArrow" style="padding-left: 8px;">»</a></li>
+							<li><a>Moves: <span id="moves">0</span></a></li>
+							<li><a>Distance: <span id="distance">0</span></a></li>
+						</ul>
+					</div>
+				</div>
+			</div-->
+			<div style="position: absolute; right: 6px; top: 6px;">
+				<a type="button" class="btn btn-default btn-xs" style="margin: 0px;">
+					Moves: <span id="moves">0</span> <span id="creator-moves" class="text-muted"></span>
+				</a>
+				<a type="button" class="btn btn-default btn-xs" style="margin: 0px;">
+					Distance: <span id="distance">0</span> <span id="creator-distance" class="text-muted"></span>
+				</a>
+			</div>
+			<div style="position: absolute; left: 6px; bottom: 6px;">
+				<span id="levelNumber" class="label label-info" style="position: relative; top: -1px;"></span>
+				<span id="levelName"></span>
+			</div>
+			<div style="position: absolute; right: 6px; bottom: 6px; pointer-events: all;">
+				<a type="button" class="btn btn-default btn-sm restart" style="margin: 0px;">
+					<span class="glyphicon glyphicon-repeat" style="position: relative; top: 2px;"></span> Restart
+				</a>
+				<a type="button" class="btn btn-primary btn-sm exit" style="margin: 0px;">
+					<span class="glyphicon glyphicon-th" style="position: relative; top: 2px;"></span> Level Select
+				</a>
+			</div>
+		</div>
 		<div id="winModal" class="modal fade" role="dialog" data-backdrop="static" data-keyboard="false">
 			<div class="modal-dialog">
 				<div class="modal-content">
@@ -141,8 +151,8 @@
 						<h4 class="modal-title">Level Complete!</h4>
 					</div>
 					<div class="modal-body">
-						<span>Moves: <span id="win-player-moves">0</span> <span id="win-creator-moves" class="text-muted"></span></span><br>
-						<span>Distance: <span id="win-player-distance">0</span> <span id="win-creator-distance" class="text-muted"></span></span>
+						<span>Moves: <span id="win-moves">0</span> <span id="win-creator-moves" class="text-muted"></span></span><br>
+						<span>Distance: <span id="win-distance">0</span> <span id="win-creator-distance" class="text-muted"></span></span>
 					</div>
 					<div id="ratings" class="modal-footer hidden">
 						<div style="text-align: center;">
@@ -212,6 +222,10 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="js/play.js"></script>
 	<script>
+		$(document).ready(function() {
+		    $("body").show();
+		});
+
 		$('[data-toggle="tooltip"]').tooltip();
 
 		$(".btn").attr("draggable", "false");
@@ -243,9 +257,6 @@
 				$("#info").stop().animate({right: "0px"}, 200);
 			}
 		});
-		/*$("#winModal").modal({
-			backdrop: "static"
-		});*/
 
 		const colors = ["green", "lime", "yellow", "orange", "red"];
 		let quality = undefined;
@@ -303,7 +314,7 @@
 		$("#difficulty").on("mouseleave", function() {
 			showDifficulty(difficulty);
 		});
-		if (retrieve(readJSON("save-data/preferences/developer.json"), "level-ratings")) {
+		if (retrieve(readJSON(`${__dirname}/../../save-data/preferences/developer.json`), "level-ratings")) {
 			$("#ratings").removeClass("hidden");
 			updateRatings();
 		}
