--- a/app/source/scripts/levelselect.html
+++ b/app/source/scripts/levelselect.html
@@ -23,7 +23,7 @@
 			}
 		</style>
 	</head>
-	<body hidden style="font-family: Hasklig; -webkit-user-select: none; cursor: default; padding: 0px; opacity: 0.0;">
+	<body style="font-family: Hasklig; -webkit-user-select: none; cursor: default; padding: 0px; opacity: 0.0;">
 		<div class="container-fluid drag-bar"></div>
 		<div class="container centered" align="center" style="width: 800px; padding: 0px;">
 			<div>
@@ -71,7 +71,6 @@
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 	<script>
 		$(document).ready(function() {
-			$("body").show();
 			$("body").animate({opacity: 1.0}, 100);
 		});
 
