--- a/app/source/scripts/menu.html
+++ b/app/source/scripts/menu.html
@@ -15,7 +15,7 @@
 			}
 		</style>
 	</head>
-	<body hidden style="font-family: Hasklig; -webkit-user-select: none; cursor: default; opacity: 0.0;">
+	<body style="font-family: Hasklig; -webkit-user-select: none; cursor: default; opacity: 0.0;">
 		<div class="container-fluid drag-bar"></div>
 		<div class="container centered" align="center">
 			<h1 style="font-family: Hasklig; font-size: 80px; margin-top: 0px; margin-bottom: 0px;">「Blockade」</h1><br><br>
@@ -66,7 +66,6 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script>
 		$(document).ready(function() {
-			$("body").show();
 			$("body").animate({opacity: 1.0}, 100);
 		});
 
