--- a/app/source/scripts/index.html
+++ b/app/source/scripts/index.html
@@ -22,7 +22,7 @@
 				$("body").animate({opacity: 0.0}, intervals.vanish);
 			}, intervals.appear + intervals.hold);
 			setTimeout(function() {
-				window.location = "menu.html";
+				location = "menu.html";
 			}, intervals.appear + intervals.hold + intervals.vanish);
 		});
 	</script>
